--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -77,7 +77,10 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/girly.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">coming soon</div>
+                <div class="card-caption-title">fxtraders-navi</div>
+                <div class="card-caption-info">Design / Coding / Ruby on rails </div>
+                <div class="card-caption-url"><a class="url-link" href="https://fxtradersnavi.herokuapp.com/" target="_blank">Link</a>
+                </div>
                 <div class="card-caption-info"></div>
               </div>
             </div>
@@ -86,7 +89,7 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">coming soon</div>
+                <div class="card-caption-title">只今製作中・・</div>
                 <div class="card-caption-info"></div>
               </div>
             </div>
