--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -124,8 +124,8 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <img src="../img/image.jpg">
-              
+            <img src="/assets/image.png" height="500px">
+            <img src="/assets/image2.png" height="500px">
             </div>
             <div class="section-desc">
               <div class="section-text">
