--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -125,7 +125,7 @@
           <div class="section-body">
             <div class="section-image">
             <img src="/assets/image.png" height="500px">
-            <img src="/assets/image2.png" height="500px">
+            <img src="/assets/image.png" height="500px">
             </div>
             <div class="section-desc">
               <div class="section-text">
@@ -155,7 +155,8 @@
           </div>
           <div class="section-body">
             <div class="section-image">
-              <img class="lazyload fadein" data-src="img/about/profile.jpg" alt="">
+              <img src="/assets/majyan.jpeg" height="500px">
+              <img src="/assets/ball.jpeg" height="500px">
             </div>
             <div class="section-desc">
               <div class="section-text">
