--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -69,6 +69,7 @@
                 <div class="card-caption-title">青色会議</div>
                 <div class="card-caption-info">Design / Coding / Ruby on rails </div>
                 <div class="card-caption-url"><a class="url-link" href="https://blue-meeting.herokuapp.com/" target="_blank">Link</a>
+                <div class="card-caption-user">(email→user2@com パスワード→1212abcd)</div>
                 </div>
               </div>
             </div>
