--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -90,7 +90,7 @@
                 <img class="lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/school.jpg" alt="" />
               </a>
               <div class="card-caption">
-                <div class="card-caption-title">Florista Linda</div>
+                <div class="card-caption-title">hamu flower</div>
                 <div class="card-caption-info">Design / Coding / WordPress </div>
                 <div class="card-caption-url"><a class="url-link" href="https://myport-folio.com/" target="_blank">Link</a></div>
                 <div class="card-caption-info"></div>
